gradient gap fix - final 1.1

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -132,10 +132,10 @@ section {
 .spacer {
     content: " ";
     position: absolute;
-    background: linear-gradient(#ffffff 10%, transparent 100%);
+    background: linear-gradient(#ffffff 40%, transparent 100%);
     left: 0;
-    top: 10em;
-    height: 20em;
+    top: 0em;
+    height: 30em;
     width: 100%;
     transition: all 0.3s;
     z-index: -1;
